# pooling

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
analysis/: plot_cifar.py  plot_gem_augmentation.py  plot_loss.py  plot_loss_cifar.py  plot_noise_robustness.py  plot_preds.py  plot_reward.py  summarize_RL.py
data/: generate.py  generate_gem_dataset.py  generate_robustness_dataset.py
data/cifar10/: dataset.py
data/cifar100/: dataset.py
data/imagenet/: dataset.py
data/knn_centroid/: dataset.py
experiments/boxworld-entities/: config.yml
experiments/boxworld-pixels/: config.yml
experiments/simple-centroid-1v15v16/: config.yml
experiments/simple-centroid-1v1v30/: config.yml
experiments/simple-centroid-1v31v0/: config.yml
experiments/simple-centroid-1v3v28/: config.yml
experiments/simple-tag-1v3v0/: config.yml
experiments/simple-tag-1v3v12/: config.yml
experiments/simple-tag-1v3v28/: config.yml
experiments/simple-tag-1v3v4/: config.yml
pooling/: __init__.py
pooling/envs/: boxworld.py  boxworld_gen.py  mpe_centroid.py  mpe_tag.py  mpe_tokenizer.py  mpe_tokenizer_.py  recorder.py
pooling/heuristics/: heuristic.py  predator.py  prey.py  random.py
pooling/models/: aggregation_mlp.py  attenuator.py  autoencoder.py
pooling/nn/: attention.py  embedding.py  gem_attention.py  gem_attention_2.py  gem_pool.py  initialize.py  mlp.py  pool.py  pooling.py  transformer.py  vit.py
pooling/utils/: RL.py  diagnostics.py  supervised.py
train/: train_autoencoder.py  train_cnd.py  train_rl.py  train_supervised.py
(+118 files in other folders)
